# pytrunc

./: .buildinfo  01_examples.html  01_examples.ipynb  02_validation_iwabuchi.html  02_validation_iwabuchi.ipynb  MANIFEST.in  README.md  demo_notebook.ipynb  genindex.html  index.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  pytrunc.html  pytrunc.phase.html  pytrunc.truncation.html  pytrunc.utils.html  search.html  searchindex.js  validation_notebook_iwabuchi.ipynb
.github/workflows/: docs_github_pages.yml
_modules/: index.html
_modules/pytrunc/: phase.html  truncation.html  utils.html
_sources/: 01_examples.ipynb.txt  index.rst.txt  pytrunc.phase.rst.txt  pytrunc.rst.txt  pytrunc.truncation.rst.txt  pytrunc.utils.rst.txt
docs/: Makefile  conf.py  index.rst  notebooks.rst
docs/_notebooks/: 01_examples.py  02_validation_iwabuchi.py
pytrunc/: constant.py  phase.py  truncation.py  utils.py
pytrunc/data/: wc_wl500_reff8.nc
