[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42"]

[project]
name = "pytrunc"
version = "1.0.0"
license = {file = "LICENSE.txt"}
description = """
Scattering phase matrix truncation Python tool for radiative transfer applications.
"""
authors = [
    {name = "Mustapha Moulana", email = "mm@hygeos.com"},
]
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: Apache Software License',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering'
]
requires-python = ">= 3.10"
dependencies = [
    "numpy", 
    "scipy", 
    "netcdf4",
    "xarray",
]

[project.optional-dependencies]

extra = [
    "matplotlib",
    "notebook"
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "pydata-sphinx-theme",
    "myst-parser",
    "nbsphinx",
    "numpydoc",
    "jupytext",
    "pandoc",
]


[tool.setuptools]
packages = ["pytrunc"]

# **** pixi configuration ****
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pytrunc = { path = ".", editable = true }

[tool.pixi.dependencies]
pandoc = ">=3.9,<4"

[tool.pixi.environments]
default = { features = ["extra"], solve-group = "default" }
docs = { features = ["extra", "docs"], solve-group = "docs" }
